sixth week-docker and kubernetes/kubernetes-files/nestjs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestjs-api
  template:
    metadata:
      labels:
        app: nestjs-api
    spec:
      containers:
        - name: nestjs-api
          image: sulukarpuz/nest-app:v1.0
          ports:
            - containerPort: 3000
