sixth week-docker and kubernetes/kubernetes-files/graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-gateway
spec:
  selector:
    app: graphql-gateway
  ports:
    - name: web
      protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
