sixth week-docker and kubernetes/kubernetes-files/nestjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-api
spec:
  selector:
    app: nestjs-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
