sixth week-docker and kubernetes/kubernetes-files/graphql-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix("/gateway")
      kind: Rule
      services:
        - name: graphql-gateway
          port: 4000
