sixth week-docker and kubernetes/kubernetes-files/nestjs-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix("/")
      kind: Rule
      services:
        - name: nestjs-api
          port: 3000
